<resources>
    <!--                 Application                 -->
    <string name="app_name">Autoservice ST2</string>
    <string name="app_description">Для вашего удобства!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <!--                Navigation menu                 -->
    <string name="menu_news">Новости</string>
    <string name="menu_login_registration">Вход или регистрация</string>
    <string name="menu_about">О приложении</string>

    <!--                Auth navigation menu                 -->
    <string name="auth_menu_ticket">Мои заявки</string>
    <string name="auth_menu_lk">Личный кабинет</string>
    <string name="auth_menu_history_ticket">История заявок</string>
    <string name="auth_menu_my_car">Мои автомобили</string>
    <string name="auth_menu_logout">Выйти</string>

    <!--                 Registration                 -->
    <string name="registration">Регистрация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--                    About                 -->
    <string name="about_title">О приложении</string>
    <string name="about">Приложение разработано в рамках курса \"Мобильная разработка. IT Академия
        Samsung\", в качестве индивидуального (выпускного) проекта.
    </string>

    <string name="replenishBalanceSpinner">Выберите способ оплаты:</string>

</resources>