<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/logged_news"
                android:icon="@drawable/ico_newspaper_folding"
                android:title="@string/menu_news"/>
        <item
                android:id="@+id/logged_ticket"
                android:icon="@drawable/ico_transaction_order"
                android:title="@string/auth_menu_ticket"/>
        <item
                android:id="@+id/logged_nav_lk"
                android:icon="@drawable/ico_avatar"
                android:title="@string/auth_menu_lk"/>
        <item
                android:id="@+id/logged_nav_history_ticket"
                android:icon="@drawable/ico_history_query"
                android:title="@string/auth_menu_history_ticket"/>
        <item
                android:id="@+id/logged_nav_my_car"
                android:icon="@drawable/ico_car"
                android:title="@string/auth_menu_my_car"/>
        <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ico_info"
                android:title="@string/menu_about"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ico_logout"
                android:title="@string/auth_menu_logout"/>

    </group>
</menu>