<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_login_registration">

    <fragment
            android:id="@+id/nav_news"
            android:name="ru.cs.vsu.ast2.ui.news.NewsFragment"
            android:label="@string/menu_news"
            tools:layout="@layout/fragment_news"/>

    <fragment
            android:id="@+id/nav_login_registration"
            android:name="ru.cs.vsu.ast2.ui.login.LoginFragment"
            android:label="@string/menu_login_registration"
            tools:layout="@layout/fragment_login"/>

    <fragment
            android:id="@+id/nav_about"
            android:name="ru.cs.vsu.ast2.ui.about.AboutFragment"
            android:label="@string/menu_about"
            tools:layout="@layout/fragment_about"/>
</navigation>